# aerialdataset

./: .gitignore  README.md  app.py  download_json.ipynb  initials.py  pyproject.toml  requirements.txt
