[tool.poetry]
name = "dronedataset"
version = "0.1.0"
description = ""
authors = ["shekharkoirala <shekharkoirala4@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aicrowd-api = "0.1.23"
async-timeout = "4.0.2"
boto3 = "1.24.42"
botocore = "1.27.42"
bounding-box = "0.1.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
coloredlogs = "15.0.1"
cycler = "0.11.0"
Deprecated = "1.2.13"
fonttools = "4.34.4"
humanfriendly = "10.0"
idna = "3.3"
imageio = "2.21.0"
imgaug = "0.4.0"
jmespath = "1.0.1"
kiwisolver = "1.4.4"
loguru = "0.6.0"
matplotlib = "3.5.2"
networkx = "2.8.5"
numpy = "1.23.1"
opencv-python = "3.4.18.65"
packaging = "21.3"
pandas = "1.4.3"
Pillow = "9.2.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.1"
PyWavelets = "1.3.0"
redis = "4.3.4"
requests = "2.28.1"
s3transfer = "0.6.0"
scikit-image = "0.19.3"
scipy = "1.9.0"
Shapely = "1.8.2"
six = "1.16.0"
tifffile = "2022.7.31"
urllib3 = "1.26.11"
wrapt = "1.14.1"
jupyterlab = "^3.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
